--- a/3/mystyle.css
+++ b/3/mystyle.css
@@ -4,6 +4,8 @@
   border-collapse: collapse;
   padding: 15px;
 }
+.border{border:2px solid black; padding: 15px;
+}
 .img {text-align: center;}
 body {
 	background-image: url("food.png"); 
